@@ -171,7 +171,10 @@ has 'write_mode'   => is => 'ro',   isa => $MODE_TYPE, default => 'sync';
 
 # Construction
 sub BUILD {
-   my $self = shift; $self->read_handle; $self->write_handle; return;
+   my $self = shift; $self->_set_pid( $PID );
+
+   $self->read_handle; $self->write_handle;
+   return;
 }
 
 sub DEMOLISH {
@@ -217,7 +220,7 @@ sub stop {
 }
 
 sub start {
-   my ($self, $dirn) = @_; $self->_set_pid( $PID );
+   my ($self, $dirn) = @_;
 
    if    ($dirn eq 'read' ) {
       $self->$_maybe_close_write_handle;
